kustomize/miniflux-clean/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
  kind: Service
  metadata:
    annotations:
metadata:
